--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <dependencies>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
+			<artifactId>httpclients</artifactId>
 			<version>4.3.2</version>
 			<type>jar</type>
 			<scope>compile</scope>
